feat(infrastructure-s3): 기존 s3서비스의 파일 삭제 방식 대신 이벤트 발생 시 s3파일 삭제하는 방식으로 구현